<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="64px">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/pig"
            android:layout_width="128px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/piggy"
            android:textSize="48px"
            android:text="@string/anim_sel_pig"/>

        <TextView
            android:id="@+id/chicken"
            android:layout_width="128px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/chicken"
            android:textSize="48px"
            android:text="@string/anim_sel_chicken"/>

        <TextView
            android:id="@+id/duck"
            android:layout_width="128px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/duck"
            android:textSize="48px"
            android:text="@string/anim_sel_duck"/>

        <TextView
            android:id="@+id/other"
            android:layout_width="128px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/what"
            android:textSize="48px"
            android:text="@string/anim_sel_other"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64px"
        android:text="10"/>

</LinearLayout>