<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/round_corner_solid"
            android:textSize="64px"
            android:text="@string/exit_setting"/>
        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32px"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/round_corner_solid"
            android:textSize="64px"
            android:text="@string/save_setting"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/system_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                android:gravity="center"
                android:background="@drawable/round_corner_solid"
                android:textSize="64px"
                android:text="@string/system_setting"/>
            <TextView
                android:id="@+id/test_print"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                android:gravity="center"
                android:background="@drawable/round_corner_solid"
                android:textSize="64px"
                android:text="打印测试" />
            <EditText
                android:id="@+id/station_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                android:gravity="center"
                android:inputType="number"
                android:textSize="64px"
                android:hint="@string/edit_station_id"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>